# robotics-test

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  docker-compose.yml
catkin_ws/src/: rviz_config.rviz
catkin_ws/src/moveit_ur_robot/: .setup_assistant  CMakeLists.txt  package.xml
catkin_ws/src/moveit_ur_robot/config/: controllers.yaml  fake_controllers.yaml  gazebo_ur_robot_gazebo.urdf  joint_names.yaml  kinematics.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur_robot_gazebo.srdf
catkin_ws/src/moveit_ur_robot/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_planning_execution.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
catkin_ws/src/mtc_case/: CMakeLists.txt  package.xml
catkin_ws/src/mtc_case/config/: panda_config.yaml
catkin_ws/src/mtc_panda/: CMakeLists.txt  package.xml
catkin_ws/src/mtc_panda/launch/: demo.launch  pickplace.launch
catkin_ws/src/mtc_panda/src/: pick_place_task.cpp
catkin_ws/src/mtc_ur_robot/: CMakeLists.txt  package.xml
catkin_ws/src/mtc_ur_robot/config/: mtc.rviz  ur_robot_config.yaml
catkin_ws/src/mtc_ur_robot/include/: pick_place_task.h
catkin_ws/src/mtc_ur_robot/launch/: demo.launch  pickplace.launch
catkin_ws/src/mtc_ur_robot/src/: pick_place_demo.cpp  pick_place_task.cpp
catkin_ws/src/simple_scene/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/simple_scene/config/: rg2_position_controller.yaml  robot.srdf
catkin_ws/src/simple_scene/data/: graspables.json
catkin_ws/src/simple_scene/launch/: gazebo.launch  robot_bringup.launch  world_bringup.launch
catkin_ws/src/simple_scene/launch/inc/: load_ur.launch.xml  rviz_config.rviz  ur_control.launch.xml
catkin_ws/src/simple_scene/msg/: SceneObject.msg
catkin_ws/src/simple_scene/srv/: GetSceneObjects.srv
catkin_ws/src/simple_scene/urdf/: rg2.gazebo.xacro  rg2.urdf.xacro  robor.srdf  robot.urdf.xacro
catkin_ws/src/simple_scene/world/: remy_test.world  simple_world.sdf
catkin_ws/src/simple_scene/worlds/: simple_scene.world
colcon_ws/src/listener_jointstates_cpp/: CMakeLists.txt  package.xml
colcon_ws/src/listener_jointstates_cpp/launch/: listener_jointstates.launch.py
colcon_ws/src/listener_jointstates_cpp/src/: listener_jointstates.cpp
colcon_ws/src/mtc_tutorial/: CMakeLists.txt
colcon_ws/src/mtc_tutorial/src/: mtc_tutorial.cpp
ur_sim/docker/: Dockerfile
